# sigma-engine

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
assets/shaders/: g_buffer.frag  g_buffer.vert  light.frag  light.vert  point_light.frag  point_light.vert  screen.frag  screen.vert  solid_color.frag  solid_color.vert  sprite.fs  sprite.vert
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
sigma/: CMakeLists.txt
sigma/include/: pch.h
sigma/include/components/: point_light.h
sigma/include/core/: application.h  components.h  entity.h  game_data.h  state.h  system.h  time_system.h  types.h  world.h
sigma/include/event/: event.h  events.h  keycodes.h
sigma/include/input/: input.h
sigma/include/render/: buffer.h  frame_buffer.h  mesh.h  mesh_factory.h  renderer.h  shader.h  texture.h  vertex.h
sigma/include/resources/: resource_manager.h
sigma/include/util/: chain_iterator.h  non_copyable.h  util.h
sigma/include/window/: window.h
sigma/src/components/: point_light.cpp
sigma/src/core/: application.cpp  world.cpp
sigma/src/event/: events.cpp
sigma/src/input/: input.cpp
sigma/src/render/: buffer.cpp  frame_buffer.cpp  mesh.cpp  mesh_factory.cpp  shader.cpp  texture.cpp
sigma/src/util/: util.cpp
sigma/src/window/: window.cpp
